--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=bookify
 
 spring.flyway.locations=classpath:db/migration
+
+bookify.maximum.books.borrowed=5
+bookify.overdue.days=14
