--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
     </pluginRepositories>
     <properties>
         <java.version>21</java.version>
-        <spring-modulith.version>1.4.0</spring-modulith.version>
+        <spring-modulith.version>2.0.0-SNAPSHOT</spring-modulith.version>
     </properties>
     <dependencies>
         <dependency>
