--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=bookify
 
+server.port=8080
+
 spring.flyway.locations=classpath:db/migration
 
 bookify.maximum.books.borrowed=5
