--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,8 @@ server.port=8080
 
 spring.flyway.locations=classpath:db/migration
 
+spring.aot.repositories.enabled=true
+
+
 bookify.maximum.books.borrowed=5
 bookify.overdue.days=14
