--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,9 @@ server.port=8080
 
 spring.flyway.locations=classpath:db/migration
 
+spring.jpa.defer-datasource-initialization=true
 spring.aot.repositories.enabled=true
-
+spring.jpa.open-in-view=false
 
 bookify.maximum.books.borrowed=5
 bookify.overdue.days=14
