Migrating to newer version of the Modulith

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,5 @@
 spring.application.name=bookify-dev
 spring.docker.compose.lifecycle-management=start_only
 server.port=8081
+
+spring.modulith.events.jdbc.schema-initialization.enabled = true
