--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,30 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <showWarnings>true</showWarnings>
+<!--                    <compilerArgs>-->
+<!--                        <arg>-XDcompilePolicy=simple</arg>-->
+<!--                        <arg>&#45;&#45;should-stop=ifError=FLOW</arg>-->
+<!--                        <arg>-Xplugin:ErrorProne -XepOpt:NullAway:AnnotatedPackages=org.jetbrains.conf.bookify</arg>-->
+<!--                    </compilerArgs>-->
+<!--                    <annotationProcessorPaths>-->
+<!--                        <path>-->
+<!--                            <groupId>com.google.errorprone</groupId>-->
+<!--                            <artifactId>error_prone_core</artifactId>-->
+<!--                            <version>2.41.0</version>-->
+<!--                        </path>-->
+<!--                        <path>-->
+<!--                            <groupId>com.uber.nullaway</groupId>-->
+<!--                            <artifactId>nullaway</artifactId>-->
+<!--                            <version>0.12.8</version>-->
+<!--                        </path>-->
+<!--                    </annotationProcessorPaths>-->
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
