--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,3 +3,8 @@ spring.docker.compose.lifecycle-management=start_only
 server.port=8081
 
 spring.modulith.events.jdbc.schema-initialization.enabled = true
+
+sdlc.pro.spring.tx.board.alarming-threshold=1000
+sdlc.pro.spring.tx.board.storage=in_memory
+sdlc.pro.spring.tx.board.enable=true
+sdlc.pro.spring.tx.board.duration-buckets=100, 500, 1000, 2000, 5000
