Added API to manage employees

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 spring.application.name=bookify-dev
-spring.docker.compose.lifecycle-management=start_only
+spring.docker.compose.lifecycle-management=start_and_stop
 server.port=8081
 
-spring.modulith.events.jdbc.schema-initialization.enabled = true
+#spring.modulith.events.jdbc.schema-initialization.enabled = true
