--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=bookify
 server.port=8080
 
 spring.flyway.locations=classpath:db/migration
+spring.docker.compose.skip.in-tests=true
 
 spring.jpa.open-in-view=false
 
