--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,3 +3,8 @@ spring.docker.compose.lifecycle-management=start_and_stop
 server.port=8081
 
 #spring.modulith.events.jdbc.schema-initialization.enabled = true
+
+spring.datasource.url=jdbc:postgresql://127.0.0.1:56056/bookify?
+spring.datasource.username=bookify
+spring.datasource.password=secret
+spring.datasource.driver-class-name=org.postgresql.Driver
