--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>4.0.0-RC1</version>
+        <version>4.0.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>org.jetbrains.conf</groupId>
@@ -51,7 +51,7 @@
     </pluginRepositories>
     <properties>
         <java.version>21</java.version>
-        <spring-modulith.version>2.0.0-RC1</spring-modulith.version>
+        <spring-modulith.version>2.0.0</spring-modulith.version>
     </properties>
     <dependencies>
         <dependency>
