--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@ server.port=8081
 
 #spring.modulith.events.jdbc.schema-initialization.enabled = true
 
-spring.datasource.url=jdbc:postgresql://127.0.0.1:56056/bookify?
+spring.datasource.url=jdbc:postgresql://127.0.0.1:56056/bookify
 spring.datasource.username=bookify
 spring.datasource.password=secret
 spring.datasource.driver-class-name=org.postgresql.Driver
