--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.flyway.locations=classpath:db/migration
 
 bookify.maximum.books.borrowed=5
 bookify.overdue.days=14
+
+spring.flyway.enabled=true
