Split data and schema create in dev and test sources for DB migration

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,6 +2,8 @@ spring.application.name=bookify-dev
 spring.docker.compose.lifecycle-management=start_and_stop
 server.port=8081
 
+spring.flyway.locations=db/migration,data
+
 #spring.modulith.events.jdbc.schema-initialization.enabled = true
 
 spring.datasource.url=jdbc:postgresql://127.0.0.1:50253/bookify
