--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,2 +1,2 @@
 spring.modulith.events.jdbc.schema-initialization.enabled = true
-spring.flyway.locations=db/migration,db/migration/test-data
+spring.flyway.locations=db/migration,test-data
